[WIP] Support for ML-based service
- Added account type field for users
- Added a basic "career" page that allows for student applications & recruiter review
- Added the framework where an ML model would be used
